# ranger_proxy_client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  client_acceptor.cpp  client_acceptor.hpp  common.hpp  computing_service.hpp  config.cpp  config.hpp  initiator.cpp  initiator.hpp  macro_def.hpp  main.cpp  network_io_service.hpp  processor.hpp  processor_aes_cfb128.cpp  processor_aes_cfb128.hpp  processor_config.cpp  processor_config.hpp  server_config.cpp  server_config.hpp  server_connector.cpp  server_connector.hpp  session.cpp  session.hpp  singleton.hpp  util.cpp  util.hpp
vc15/ranger_proxy_client/: ranger_proxy_client.licenseheader  ranger_proxy_client.rc  ranger_proxy_client.sln  ranger_proxy_client.vcxproj  ranger_proxy_client.vcxproj.filters  resource.h
