CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(PROXY_CLIENT)

# silence policy CMP0042 warning by enabling RPATH explicitly
IF(APPLE AND NOT DEFINED CMAKE_MACOSX_RPATH)
	SET(CMAKE_MACOSX_RPATH TRUE)
ENDIF()

SET(CMAKE_MODULE_PATH ${PROXY_CLIENT_SOURCE_DIR}/cmake)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

FIND_PACKAGE(Boost REQUIRED COMPONENTS system)
FIND_PACKAGE(OpenSSL REQUIRED)
INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}
	${OPENSSL_INCLUDE_DIR}
)

ADD_SUBDIRECTORY(src)
